# On-going: GPAC 2.1-DEV

## Media Formats
- 2-pass encoding for FFmpeg codecs other than libx264
- Conversion filters for VTT, TXG3 and TTML
- SubstationAlpha subtitle import (basic)
- DVB subpictures in M2TS mux and demux
- FFMPEG (mostly for Matroska) subtitle import and export (SRT/SSA to TX3G, TX3G to SRT, WebVTT and DVB subpictures)
- EC3+Atmos signaling support

## Media player
- subtitle delay and position adjustment
- audio delay adjustment

## MP4Box
- allow numbers and media types as identifiers for track actions
- dlba option to update atmos+ec3 signaling

## Filters
- UTC-based range extraction in reframer
- Thumbnail generator filter
- Unframer filter
- FFMPEG bitstream filters support
- initseg support in mp4dmx filter
- Access to GPU textures of decoders in Python bindings
- Range extraction in reformer now supports Chapters editing
- dual in-band and out-of-band parameter set support in dasher
- non-blocking IO for RTSP and HTTP servers/clients
- RTSP over HTTP in rtsp server

## Misc
- Removed GF_Terminal API
- Removed MP4Client, merged old behaviour in gpac -mp4c
- Removed osmo4ios, direct compilation of gpac is now used on iOS
- Removed Android Osmo4 and MP4Box, replaced by GPAC for Android which can run GUI as well as MP4Box and gpac command lines


# 22/02/2022: GPAC 2.0

## Adaptive Streaming
- Low Latency HLS (LL-HLS, generation and playback)
- Custom forwarding modes of DASH reader, allowing for example to encrypt/decrypt a live DASH/HLS session
- DASHing now possible using inband cues (generated by flist, dashin or dasher filters)
- Cue-generation only mode for dasher
- HLS/DASH signaling of intra-only representations
- playback improvements for SRD (HEVC tiling and independent streams)
- CMAF-compatible signaling
- PPS injection for inband parameter set modes
- Improved SmoothStreaming support
- DASH period continuity support (from playlists or reframer)
- DASH MPD Chaining support
- Text segments in native format (WebVTT, TTML) in dasher