@@ -5566,6 +5566,8 @@ ll_rend_rep (bool, default: true): inject rendition reports for LL-HLS
 .br
 ll_part_hb (dbl, default: -1): user-defined part hold-back for LLHLS, negative value means 3 times max part duration in session
 .br
+ckurl (str):                   set the ClearKey URL common to all encrypted streams (overriden by CKUrl pid property)
+.br
 hls_absu (enum, default: no):  use absolute url in HLS generation using first URL in base
 .br
 * no: do not use absolute URL
@@ -10922,7 +10924,7 @@ Authors: GPAC developers, see git repo history (-log)
 .br
 For bug reports, feature requests, more information and source code, visit https://github.com/gpac/gpac
 .br
-build: 2.1-DEV-rev482-g1016912db-master
+build: 2.1-DEV-rev487-gbc9b929a3-master
 .br
 Copyright: (c) 2000-2022 Telecom Paris distributed under LGPL v2.1+ - http://gpac.io
 .br
